@@ -30,7 +30,12 @@ see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
 
 #define ARC_FP_DEBUG 1
 #define FINE_GRAINED_LIBRARIES
-#define ARC_OPTFPE (defined (__ARC700__) || defined (__ARC_FPX_QUARK__))
+
+#if (defined (__ARC700__) || defined (__ARC_FPX_QUARK__))
+#define ARC_OPTFPE 1
+#else
+#define ARC_OPTFPE 0
+#endif
 
 #if !ARC_OPTFPE || ARC_FP_DEBUG
 #define L_pack_sf
